# ItzMenu

./: .gitignore  README.md  pyproject.toml  settings_example.env
.github/workflows/: build.yml
itzmenu-api/: README.md  pyproject.toml
itzmenu-api/src/itzmenu_api/persistence/: enums.py  schemas.py
itzmenu-client/: pyproject.toml
itzmenu-client/src/itzmenu_client/: client.py
itzmenu-client/tests/test_itzmenu_client/: client.py  conftest.py  test_client.py
itzmenu-extractor/: README.md  pyproject.toml  settings_example.env
itzmenu-extractor/src/itzmenu_extractor/: __init__.py  __main__.py  cmd.py  jobs.py
itzmenu-extractor/src/itzmenu_extractor/config/: settings.py
itzmenu-extractor/src/itzmenu_extractor/ocr/: extractor.py  google_vision.py  postprocess.py  preprocess.py
itzmenu-extractor/src/itzmenu_extractor/persistence/: database.py  models.py
itzmenu-extractor/src/itzmenu_extractor/rest/: client.py
itzmenu-extractor/src/itzmenu_extractor/util/: env.py  image.py  time.py
itzmenu-extractor/tests/resources/: speiseplanWeek.csv
itzmenu-extractor/tests/test_itzmenu/: classification.py  conftest.py  test_jobs.py
itzmenu-extractor/tests/test_itzmenu/config/: test_settings.py
itzmenu-extractor/tests/test_itzmenu/ocr/: test_extractor.py  test_postprocess.py  test_preprocess.py
itzmenu-extractor/tests/test_itzmenu/persistence/: test_database.py  test_enums.py
itzmenu-extractor/tests/test_itzmenu/rest/: test_client.py
itzmenu-extractor/tests/test_itzmenu/util/: test_env.py  test_image.py  test_time.py
itzmenu-service/: README.md  pyproject.toml
itzmenu-service/src/itzmenu_service/: __main__.py  app.py
itzmenu-service/src/itzmenu_service/authentication/: permissions.py
itzmenu-service/src/itzmenu_service/authentication/strategy/: jwt.py
itzmenu-service/src/itzmenu_service/config/: settings.py
itzmenu-service/src/itzmenu_service/mail/: client.py  templates.py
itzmenu-service/src/itzmenu_service/mail/templates/: reset.html  verify.html
itzmenu-service/src/itzmenu_service/manager/: base.py  exceptions.py  menus.py  users.py
itzmenu-service/src/itzmenu_service/persistence/: database.py  models.py  schemas.py
itzmenu-service/src/itzmenu_service/persistence/adapter/: adapter.py  base.py
itzmenu-service/src/itzmenu_service/router/: common.py  menus.py
itzmenu-service/src/itzmenu_service/routes/: permissions.py
itzmenu-service/src/itzmenu_service/util/: permissions.py
itzmenu-service/tests/http/: menus.http  users.http
itzmenu-service/tests/test_itzmenu_service/: conftest.py  test_app.py  test_login.py
itzmenu-service/tests/test_itzmenu_service/app/: test_auth_router.py  test_register_router.py  test_reset_password_router.py  test_verify_router.py
itzmenu-service/tests/test_itzmenu_service/authentication/: test_permissions.py
itzmenu-service/tests/test_itzmenu_service/authentication/strategy/: test_jwt.py
itzmenu-service/tests/test_itzmenu_service/mail/: test_client.py
itzmenu-service/tests/test_itzmenu_service/manager/: test_base.py
itzmenu-service/tests/test_itzmenu_service/persistence/: test_adapter.py
itzmenu-service/tests/test_itzmenu_service/router/: test_auth_router.py  test_menus.py  test_register_router.py  test_reset_password_router.py  test_verify_router.py
itzmenu-service/tests/test_itzmenu_service/routes/: test_permissions.py
itzmenu-service/tests/test_itzmenu_service/util/: test_permissions.py
src/itz_menu/: __init__.py  __main__.py  cmd.py  jobs.py  services.py  time.py  utils.py
src/itz_menu/config/: settings.py
src/itz_menu/ocr/: extractor.py  postprocess.py  postprocessing.py  preprocess.py  preprocessing.py
src/itz_menu/persistence/: database.py  enums.py  models.py
src/itz_menu/rest/: client.py  requests.py
src/itzmenu/: __init__.py  __main__.py  cmd.py  jobs.py  utils.py
src/itzmenu/config/: settings.py
src/itzmenu/ocr/: extractor.py  postprocess.py  preprocess.py
src/itzmenu/persistence/: database.py  models.py
src/itzmenu/rest/: client.py
tests/resources/: speiseplanWeek.csv
tests/test_itz_menu/: test_time.py  test_utlis.py
tests/test_itz_menu/config/: test_settings.py
tests/test_itz_menu/ocr/: test_extractor.py  test_postprocess.py  test_postprocessing.py  test_preprocess.py  test_preprocessing.py
tests/test_itz_menu/persistence/: test_database.py  test_enums.py
tests/test_itz_menu/rest/: test_client.py
tests/test_itzmenu/: conftest.py  test_time.py  test_utlis.py
tests/test_itzmenu/config/: test_settings.py
tests/test_itzmenu/ocr/: test_extractor.py  test_postprocess.py  test_preprocess.py
tests/test_itzmenu/rest/: test_client.py
