[build-system]
requires = [ 'setuptools>=69.1.1' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'itzmenu_service'
dynamic = ['version']
readme = 'README.md'
license = { text = 'Apache License 2.0' }
authors = [
    { name = 'Louke', email = 'git@jannsen.org' }
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache License 2.0',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
    'fastapi-users>=13.0.0'
]

[project.optional-dependencies]
test = [
    'pytest>=8.0.2'
]


[tool.setuptools.package-data]
'*' = [ '*.json', '*.jpg' ]

[tool.setuptools.dynamic]
version = { attr = 'itzmenu_service.__version__' }