[build-system]
requires = [ 'setuptools>=69.1.1', 'setuptools-git-versioning>=2.0,<3' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'itzmenu_service'
dynamic = ['version']
readme = 'README.md'
license = { text = 'Apache License 2.0' }
authors = [
    { name = 'Louke', email = 'git@jannsen.org' }
]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache License 2.0',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
    'itzmenu_api',
    'fastapi-users[beanie]>=13.0.0',
    'pydantic_settings>=2.2.1',
    'typing_extensions>=4.12.1',
    'yagmail>=0.15.293'
]

[project.optional-dependencies]
test = [
    'pytest>=8.2.1',
    'pytest-asyncio>=0.23.6',
    'pytest_httpserver>=1.0.10',
    'pytest-dependency>=0.6.0',
    'smtp-test-server>=0.1.0'
]

[project.scripts]
itzmenu_service = 'itzmenu_service.__main__:main'

[tool.setuptools.package-data]
'*' = [ '*.json', '*.jpg', '*.html' ]

[tool.setuptools-git-versioning]
enabled = true